Get demo static analysis working